session-17-devsecops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kirana
  labels:
    # Pod Security Admission: reject Pods that don't meet the "restricted" profile
    pod-security.kubernetes.io/enforce: restricted
