session-17-devsecops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kirana-catalog
  namespace: kirana
spec:
  selector: { app: kirana-catalog }
  ports:
    - port: 80
      targetPort: 3000
